--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": " nodemon server.js",
     "start": "node server.js"
-  },
+  },"engines": {
+  "node": "18.x"
+  }
   "type": "module",
   "dependencies": {
     "bcryptjs": "^2.4.3",
